@@ -213,7 +213,7 @@
 ">
 
 <!-- this will be updated by 'prepare-release' -->
-<!ENTITY apt-product-version "0.9.8">
+<!ENTITY apt-product-version "0.9.7.6ubuntu2">
 
 <!-- Codenames for debian releases -->
 <!ENTITY oldstable-codename "squeeze">
